v64 - fixed copy link button display being off center

--- a/src/Content/Home/MiddleContent/Buttons/ImageShareButton/ImageShareButton.scss
+++ b/src/Content/Home/MiddleContent/Buttons/ImageShareButton/ImageShareButton.scss
@@ -47,4 +47,11 @@
     height: 45em;
 
     padding: 0;
+
+}
+
+#postDetailCopyBtn {
+    .copied-to-clipboard {
+        left: 0;
+    }
 }
